[gd_scene load_steps=6 format=3 uid="uid://bnj7wcohm8nfl"]

[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_1byoy"]
[ext_resource type="FontFile" uid="uid://ewapdr1gqw01" path="res://PreFabs/ThaleahFat.ttf" id="1_f3c22"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kac25"]
bg_color = Color(0.101961, 0.0862745, 0.145098, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m7me2"]
bg_color = Color(0, 0, 0, 0.509804)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xtno7"]
bg_color = Color(0, 0, 0, 0.784314)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1byoy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.32549, 0.219608, 0.25098, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 88.8
theme_override_colors/font_color = Color(0.564706, 0.407843, 0.454902, 1)
theme_override_colors/font_shadow_color = Color(0.141176, 0.0705882, 0.054902, 1)
theme_override_constants/shadow_offset_x = 14
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("1_f3c22")
theme_override_font_sizes/font_size = 115
text = "The Legend 
of forkner"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="StartContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 10

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/StartContainer"]
layout_mode = 2
focus_mode = 0
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("1_f3c22")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_kac25")
theme_override_styles/hover = SubResource("StyleBoxFlat_m7me2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xtno7")
text = "Start"

[node name="OptionsContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 10

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_f3c22")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_kac25")
theme_override_styles/hover = SubResource("StyleBoxFlat_m7me2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xtno7")
text = "Options
"

[node name="LoreContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 10

[node name="LoreButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/LoreContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_f3c22")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_kac25")
theme_override_styles/hover = SubResource("StyleBoxFlat_m7me2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xtno7")
text = "Lore"

[node name="CreditContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 10

[node name="CreditButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/CreditContainer"]
layout_mode = 2
focus_mode = 0
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("1_f3c22")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_kac25")
theme_override_styles/hover = SubResource("StyleBoxFlat_m7me2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xtno7")
text = "CREDITS"

[node name="ExitGameContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 10

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/ExitGameContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_f3c22")
theme_override_font_sizes/font_size = 75
text = "Exit"

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/StartContainer/StartButton" to="." method="_on_start_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/OptionsContainer/OptionsButton" to="." method="_on_study_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/OptionsContainer/OptionsButton" to="." method="_on_options_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/LoreContainer/LoreButton" to="." method="_on_lore_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/LoreContainer/LoreButton" to="." method="_on_exit_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/CreditContainer/CreditButton" to="." method="_on_credit_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/ExitGameContainer/Button" to="." method="_on_button_button_up"]
